# gitproject

./: .dockerignore  .env.example  .gitignore  README.md  docker-compose.yml
backend/: .dockerignore  .env.example  Dockerfile  README.md  main.py  pyproject.toml
backend/app/: __init__.py  fastset.py  main.py
backend/app/core/: config.py  security.py
backend/app/routes/: __init__.py  analysis_runs.py  auth.py  projects.py  services.py
backend/app/utils/: __init__.py  auth.py  db.py  rediscl.py  tokenset.py
backend/core/: security.py  settings.py
backend/routes/: analysis_runs.py  auth.py  projects.py  services.py
backend/schemas/: analysis_runs.py  projects.py
backend/src/: __init__.py
backend/src/ai/: risk_detector.py  summary_generator.py
backend/src/apis/: __init__.py  analysis_runs.py  auth.py  projects.py  settings.py  websocket.py  workspace.py
backend/src/domains/: analysis_status.py
backend/src/models/: __init__.py  analysis_runs.py  auth.py  projects.py  settings.py  workspace.py
backend/src/parsers/: diff_parser.py  zip_parser.py
backend/src/repositories/: ai_output_repository.py  analysis_log_repository.py  analysis_run_repository.py  changed_file_repository.py  project_repository.py  refresh_session_repository.py  risk_finding_repository.py  setting_repository.py  uploaded_file_repository.py  user_repository.py  workspace_repository.py
backend/src/services/: analysis_run_service.py  auth_service.py  project_service.py  setting_service.py  (+2 more)
backend/utils/: auth.py  db.py  fastset.py  rediscl.py  schema.py  tokenset.py
(+91 files in other folders)
