[project]
name = "ai-lab-backend"
version = "0.1.0"
description = "Backend service for the local AI lab."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiokafka>=0.10.0",
    "asyncpg>=0.29.0",
    "fastapi>=0.115.0",
    "httpx>=0.27.0",
    "pymysql>=1.1.1",
    "redis>=5.0.0",
    "uvicorn[standard]>=0.30.0",
]

[dependency-groups]
dev = [
    "ruff>=0.5.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.uv]
package = false
